fix contrast colors

--- a/styles/base.less
+++ b/styles/base.less
@@ -309,3 +309,9 @@ atom-text-editor .bracket-matcher .region {
 .syntax--punctuation.syntax--section.syntax--embedded.syntax--end {
   color: @purple;
 }
+
+
+//php
+.syntax--other.syntax--property.syntax--php {
+  color: @orange;
+}
