--- a/styles/colors.less
+++ b/styles/colors.less
@@ -6,13 +6,13 @@
 @blue: #888888; // Comment
 @find-highlight: #ED474A;
 
-@cyan: #84B082;
+@cyan: #09E85E;
 @soft-cyan: #A6B07E;
-@green: #81C564;
+@green: #56f910;
 @orange: #977C6F;
-@pink: #4F9546;
+@pink: #17af03;
 @purple: #E6F8B2;
-@red: #BEEE62 ;
+@red: #BEEE62;
 @yellow: #4F9546 ; // Strings
 @dark-yellow: #E6DB74;
 @sandstone: #cfcfc2;
